Fixed bugs cursor not showing on accordion panels

--- a/Static/css/styles.css
+++ b/Static/css/styles.css
@@ -7,7 +7,7 @@ header{
   height: 60px;
   background-color: white;
 }
-a {
+a, .accordion:hover {
   cursor: url("../images/fatbugslink.png"), default;
 }
 
